[gd_scene load_steps=27 format=3 uid="uid://bqqgyqafm7xwp"]

[ext_resource type="Environment" uid="uid://bqnqgflivjvue" path="res://scenes/main-environment.tres" id="1_ahusb"]
[ext_resource type="Script" uid="uid://djpme521r3cxe" path="res://scripts/main.gd" id="1_jkv2x"]
[ext_resource type="PackedScene" uid="uid://bis0hgcd7hm7o" path="res://opject_new/banana.tscn" id="3_muem4"]
[ext_resource type="Script" uid="uid://bcg2kkbsnttec" path="res://scripts/view.gd" id="5_bg0fr"]
[ext_resource type="PackedScene" uid="uid://dl817pjmvagl2" path="res://opject_new/pallet.tscn" id="6_0ld40"]
[ext_resource type="PackedScene" uid="uid://dfpisimsgf5ce" path="res://objects/coin.tscn" id="10_fwhys"]
[ext_resource type="Script" uid="uid://bap462su1xjtx" path="res://scripts/hud.gd" id="11_apvpm"]
[ext_resource type="PackedScene" uid="uid://dy017k58p20sk" path="res://objects/cloud.tscn" id="13_drtpy"]
[ext_resource type="Texture2D" uid="uid://cd7oyc56ehkx1" path="res://sprites/coin.png" id="13_jfda3"]
[ext_resource type="PackedScene" uid="uid://cil8wxd3q37s" path="res://MODEL03/spider.tscn" id="14_dp3eg"]
[ext_resource type="PackedScene" uid="uid://ccqt3dosdpu5v" path="res://MODEL03/ghoooooost.tscn" id="15_0ld40"]
[ext_resource type="PackedScene" uid="uid://6v0gynsi48ar" path="res://opject_new/box1.tscn" id="16_yc10j"]
[ext_resource type="PackedScene" uid="uid://bei232h00ticm" path="res://opject_new/pallet_broken.tscn" id="17_gqmmt"]
[ext_resource type="FontFile" uid="uid://d0cxd77jybrcn" path="res://fonts/lilita_one_regular.ttf" id="17_tk810"]
[ext_resource type="PackedScene" uid="uid://bhle0vc4fh1ta" path="res://MODEL03/floor.tscn" id="18_yc10j"]
[ext_resource type="PackedScene" uid="uid://cj05p46fc4pi2" path="res://MODEL03/d_tree.tscn" id="19_jscy8"]
[ext_resource type="PackedScene" uid="uid://kf8w28c3kdav" path="res://opject_new/shipping_container.tscn" id="20_pm3ni"]
[ext_resource type="PackedScene" uid="uid://c5i410t3coqk3" path="res://MODEL03/fence.tscn" id="20_y6deb"]
[ext_resource type="PackedScene" uid="uid://64p213ufdph" path="res://MODEL03/cobweb.tscn" id="21_og1vs"]
[ext_resource type="PackedScene" uid="uid://cf0nnyhaxwjew" path="res://MODEL03/grave_1.tscn" id="22_jscy8"]
[ext_resource type="PackedScene" uid="uid://dnj8l5wj5gvdu" path="res://MODEL03/pumpkin_1.tscn" id="23_pm3ni"]
[ext_resource type="PackedScene" uid="uid://cnqg7sils4onc" path="res://MODEL-HALLOWEEN/Simple Candelabra.glb" id="24_og1vs"]
[ext_resource type="Script" uid="uid://b3w3ah03k8unp" path="res://scenes/WinPopup.gd" id="24_y6deb"]
[ext_resource type="PackedScene" uid="uid://d2vwmks2ywwu4" path="res://MODEL03/coffin.tscn" id="25_2wyq8"]
[ext_resource type="PackedScene" uid="uid://d3mvrs20xgfcg" path="res://MODEL03/coffin_(1).tscn" id="26_2wyq8"]

[sub_resource type="LabelSettings" id="LabelSettings_38ys3"]
font = ExtResource("17_tk810")
font_size = 48
shadow_color = Color(0, 0, 0, 0.376471)
shadow_offset = Vector2(2, 2)

[node name="Main" type="Node3D"]
script = ExtResource("1_jkv2x")

[node name="Environment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_ahusb")

[node name="Banana" parent="." groups=["Player"] instance=ExtResource("3_muem4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.623764, 0)

[node name="View" type="Node3D" parent="." node_paths=PackedStringArray("target") groups=["Player"]]
transform = Transform3D(0.707107, -0.298836, 0.640856, 0, 0.906308, 0.422618, -0.707107, -0.298836, 0.640856, 0, 0, 0)
script = ExtResource("5_bg0fr")
target = NodePath("../Banana")

[node name="World" type="Node3D" parent="."]

[node name="coin15" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 0.863043, 0.50513, 0, -0.50513, 0.863043, -0.373541, 4.33771, 16.9616)

[node name="coin16" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 0.863043, 0.50513, 0, -0.50513, 0.863043, -0.373541, 4.28052, 16.369)

[node name="coin17" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 0.863043, 0.50513, 0, -0.50513, 0.863043, -0.373541, 4.33822, 15.7032)

[node name="coin24" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(0.0745673, -0.639287, 0.765344, 0.012485, 0.768019, 0.640305, -0.997138, -0.0381905, 0.0652506, -19.8907, 5.42138, 16.3913)

[node name="coin25" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(0.0745673, -0.639287, 0.765344, 0.012485, 0.768019, 0.640305, -0.997138, -0.0381905, 0.0652506, -20.4641, 5.26739, 16.3465)

[node name="coin26" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(0.0745673, -0.639287, 0.765344, 0.012485, 0.768019, 0.640305, -0.997138, -0.0381905, 0.0652506, -21.1283, 5.21467, 16.2961)

[node name="coin27" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(0.999812, -7.00468e-05, -0.0194109, 0.000921547, 0.999037, 0.0438651, 0.0193891, -0.0438746, 0.998849, -20.2756, 5.02985, 12.3716)

[node name="coin28" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(0.999812, -7.00468e-05, -0.0194109, 0.000921547, 0.999037, 0.0438651, 0.0193891, -0.0438746, 0.998849, -20.2651, 5.25591, 11.8209)

[node name="coin29" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(0.999812, -7.00468e-05, -0.0194109, 0.000921547, 0.999037, 0.0438651, 0.0193891, -0.0438746, 0.998849, -20.2545, 5.61769, 11.2592)

[node name="coin18" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 0.863043, 0.50513, 0, -0.50513, 0.863043, -0.373541, 4.29428, 15.0772)

[node name="coin19" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 0.863043, 0.50513, 0, -0.50513, 0.863043, -0.373541, 4.14178, 14.3673)

[node name="coin20" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 0.863043, 0.50513, 0, -0.50513, 0.863043, -0.373541, 4.13985, 13.6921)

[node name="coin21" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 0.863043, 0.50513, 0, -0.50513, 0.863043, -0.373541, 3.74202, 13.0124)

[node name="coin22" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 0.863043, 0.50513, 0, -0.50513, 0.863043, -0.373541, 3.34028, 12.326)

[node name="coin23" parent="World" groups=["coin"] instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 0.863043, 0.50513, 0, -0.50513, 0.863043, -0.373541, 2.9747, 11.7014)

[node name="cube12" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(-1.02876, -0.695523, 0.652886, -0.929853, 0.945557, -0.457881, -0.213027, -0.768461, -1.15432, -0.862704, 3.30463, 14.3365)

[node name="cube13" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(-1.02876, -0.695523, 0.652886, -0.929853, 0.945557, -0.457881, -0.213027, -0.768461, -1.15432, 1.58234, 4.08741, 16.6363)

[node name="cube14" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(-1.02876, -0.695523, 0.652886, -0.929853, 0.945557, -0.457881, -0.213027, -0.768461, -1.15432, -15.5887, 3.37254, 17.4376)

[node name="cube15" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(-1.02876, -0.695523, 0.652886, -0.929853, 0.945557, -0.457881, -0.213027, -0.768461, -1.15432, -22.2478, 6.73945, 17.4376)

[node name="Root Scene" parent="World" instance=ExtResource("16_yc10j")]
transform = Transform3D(0.555479, 0.748008, 0.363219, 0.101989, 0.372222, -0.922523, -0.825252, 0.549487, 0.130473, 7.29035, -0.324696, 1.77014)

[node name="Pallet_Broken" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -4.06415, 2.749, 14.7692)

[node name="Pallet_Broken10" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -4.06415, 2.749, 16.4495)

[node name="Pallet_Broken6" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -4.06415, 2.749, 13.0069)

[node name="Pallet_Broken2" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -7.19584, 2.77372, 13.0191)

[node name="Pallet_Broken7" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -7.19584, 2.77372, 16.3657)

[node name="Pallet_Broken9" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -7.19584, 2.77372, 17.7804)

[node name="Pallet_Broken11" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -9.73351, 2.77372, 17.7804)

[node name="Pallet_Broken3" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -10.0282, 2.77372, 14.6042)

[node name="Pallet_Broken5" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -10.0282, 2.77372, 13.0313)

[node name="Pallet_Broken4" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -12.2347, 2.99073, 15.9857)

[node name="Pallet_Broken12" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -12.2347, 2.99073, 17.6102)

[node name="Pallet_Broken8" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -12.2347, 2.99073, 14.4488)

[node name="Pallet_Broken13" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -15.0626, 2.99073, 14.4488)

[node name="Pallet_Broken14" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -15.0626, 2.99073, 15.8489)

[node name="Pallet_Broken15" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -15.0626, 2.99073, 17.5637)

[node name="Pallet_Broken16" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -17.2775, 2.99073, 17.5637)

[node name="Pallet_Broken17" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -17.2775, 2.99073, 15.9478)

[node name="Pallet_Broken18" parent="World" instance=ExtResource("17_gqmmt")]
transform = Transform3D(0.0141262, -0.038475, 0.99916, 0.00054391, 0.99926, 0.0384712, -0.9999, 0, 0.0141367, -17.2775, 2.99073, 14.5373)

[node name="Pallet" parent="World" instance=ExtResource("6_0ld40")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.451592, 0.379087, 4.55488)

[node name="Pallet2" parent="World" instance=ExtResource("6_0ld40")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.18906, 0.379087, 4.55488)

[node name="Pallet3" parent="World" instance=ExtResource("6_0ld40")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.447643, 0.379087, 6.30169)

[node name="Pallet4" parent="World" instance=ExtResource("6_0ld40")]
transform = Transform3D(1, 0, 0, 0, 0.885702, 0.464255, 0, -0.464255, 0.885702, -0.447643, 0.66205, 8.56279)

[node name="Pallet5" parent="World" instance=ExtResource("6_0ld40")]
transform = Transform3D(1, 0, 0, 0, 0.885702, 0.464255, 0, -0.464255, 0.885702, -0.447643, 1.81018, 10.826)

[node name="Pallet8" parent="World" instance=ExtResource("6_0ld40")]
transform = Transform3D(-0.0647413, -0.0347566, -0.997297, 0, 0.999393, -0.0348297, 0.997902, -0.00225492, -0.064702, -4.06482, 2.73734, 17.9475)

[node name="Pallet12" parent="World" instance=ExtResource("6_0ld40")]
transform = Transform3D(-0.0647413, -0.0347566, -0.997297, 0, 0.999393, -0.0348297, 0.997902, -0.00225492, -0.064702, -9.97986, 2.73734, 16.159)

[node name="Pallet13" parent="World" instance=ExtResource("6_0ld40")]
transform = Transform3D(-0.0647413, -0.0347566, -0.997297, 0, 0.999393, -0.0348297, 0.997902, -0.00225492, -0.064702, -12.2521, 2.95923, 13.1026)

[node name="Pallet14" parent="World" instance=ExtResource("6_0ld40")]
transform = Transform3D(-0.0647413, -0.0347566, -0.997297, 0, 0.999393, -0.0348297, 0.997902, -0.00225492, -0.064702, -14.9495, 2.95923, 13.1026)

[node name="Pallet15" parent="World" instance=ExtResource("6_0ld40")]
transform = Transform3D(-0.0647413, -0.0347566, -0.997297, 0, 0.999393, -0.0348297, 0.997902, -0.00225492, -0.064702, -17.3702, 2.95923, 13.1026)

[node name="Pallet10" parent="World" instance=ExtResource("6_0ld40")]
transform = Transform3D(-0.0647413, -0.0347566, -0.997297, 0, 0.999393, -0.0348297, 0.997902, -0.00225492, -0.064702, -7.25174, 2.73734, 14.7652)

[node name="ShippingContainer" parent="World" instance=ExtResource("20_pm3ni")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.145834, 0.543479, -4.99414)

[node name="spider" parent="World" instance=ExtResource("14_dp3eg")]
transform = Transform3D(1, 0, 0, 0, 0.997498, 0.0706966, 0, -0.0706966, 0.997498, -0.138813, 3.63451, -4.55982)

[node name="Ghoooooost" parent="World" instance=ExtResource("15_0ld40")]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -2, 1.59251, -1)

[node name="cube" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.00711, 3.68352, 15.9013)

[node name="cube2" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.92504, 0.602307, -0.244365, -0.701797, 1.65213, -0.670294, 0, 0.820264, 1.52951, -11.848, 3.03572, 15.6826)

[node name="cube3" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.92504, 0.602307, -0.244365, -0.701797, 1.65213, -0.670294, 0, 0.820264, 1.52951, -17.1275, 3.03572, 17.3844)

[node name="cube4" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.92504, 0.602307, -0.244365, -0.701797, 1.65213, -0.670294, 0, 0.820264, 1.52951, -23.3161, 6.24282, 15.1875)

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.782803, -0.475797, 0.401044, 0.000691394, 0.643821, 0.765176, -0.622269, 0.599259, -0.503657, 0, 7.0802, 0)
shadow_enabled = true
shadow_opacity = 0.75

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -640.0
offset_right = 640.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource("11_apvpm")

[node name="Icon" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 57.0
offset_top = 67.0
offset_right = 313.0
offset_bottom = 323.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("13_jfda3")

[node name="x" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 112.0
offset_top = 64.0
offset_right = 144.0
offset_bottom = 123.0
text = "×"
label_settings = SubResource("LabelSettings_38ys3")
metadata/_edit_use_anchors_ = true

[node name="Coins" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 144.0
offset_top = 64.0
offset_right = 368.0
offset_bottom = 123.0
text = "0"
label_settings = SubResource("LabelSettings_38ys3")
metadata/_edit_use_anchors_ = true

[node name="name" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -510.0
offset_top = -57.0
offset_right = -42.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "663380299-0 Sudawadee Rawisit"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WinPopup" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("24_y6deb")

[node name="VBoxContainer" type="Panel" parent="CanvasLayer/WinPopup"]
layout_mode = 0
offset_right = 1284.0
offset_bottom = 724.0

[node name="TitleLabel" type="Label" parent="CanvasLayer/WinPopup/VBoxContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -297.0
offset_right = 98.0
offset_bottom = -198.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "You Win"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StarsLabel" type="Label" parent="CanvasLayer/WinPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -186.0
offset_right = 105.0
offset_bottom = -87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="SummaryLabel" type="Label" parent="CanvasLayer/WinPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -106.0
offset_right = 110.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="CanvasLayer/WinPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 563.0
offset_top = 370.0
offset_right = 728.0
offset_bottom = 441.0
theme_override_font_sizes/font_size = 45
text = "Restart"

[node name="QuitButton" type="Button" parent="CanvasLayer/WinPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = 131.0
offset_right = 59.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45
text = "Quit"

[node name="Floor" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.378261, 3.78608, 16.1134)

[node name="Floor3" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.378261, 3.78608, 18.0397)

[node name="Floor2" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 0.969548, 0.244901, 0, -0.244901, 0.969548, -0.378261, 3.62552, 14.1421)

[node name="Floor32" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 0.840935, 0.541136, 0, -0.541136, 0.840935, -0.378261, 2.94507, 12.3118)

[node name="Floor20" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.378261, 0.389154, -0.342083)

[node name="Floor21" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.378261, 0.389154, 1.58417)

[node name="Floor22" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.378261, 0.27578, -2.36928)

[node name="Floor23" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.60862, 0.389154, -0.342083)

[node name="Floor24" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.60862, 0.389154, 1.58417)

[node name="Floor25" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.60862, 0.302334, -2.36928)

[node name="Floor26" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.62503, 0.389154, -0.342083)

[node name="Floor27" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.62503, 0.389154, 1.58417)

[node name="Floor28" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.62503, 0.237052, -2.36928)

[node name="Floor29" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.39108, 0.389154, -0.342083)

[node name="Floor30" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.39108, 0.389154, 1.58417)

[node name="Floor31" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.39108, 0.322805, -2.36928)

[node name="Floor4" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.6458, 4.70755, 16.1134)

[node name="Floor5" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.6458, 4.70755, 18.0397)

[node name="Floor6" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.6458, 4.70755, 14.1224)

[node name="Floor7" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.6194, 4.70755, 16.1134)

[node name="Floor8" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.6194, 4.70755, 18.0397)

[node name="Floor9" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.6194, 4.70755, 14.1176)

[node name="Floor10" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 0.98151, -0.191409, 0, 0.191409, 0.98151, -19.6458, 4.94461, 12.1538)

[node name="Floor11" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 0.98151, -0.191409, 0, 0.191409, 0.98151, -21.6194, 4.94461, 12.1538)

[node name="Floor12" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 0.98151, -0.191409, 0, 0.191409, 0.98151, -19.6458, 5.37032, 10.2284)

[node name="Floor13" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 0.98151, -0.191409, 0, 0.191409, 0.98151, -21.6194, 5.37032, 10.2284)

[node name="Floor14" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 0.98151, -0.191409, 0, 0.191409, 0.98151, -19.6458, 5.75496, 8.27091)

[node name="Floor15" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 0.98151, -0.191409, 0, 0.191409, 0.98151, -21.6194, 5.75496, 8.27091)

[node name="Floor16" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 0.98151, -0.191409, 0, 0.191409, 0.98151, -19.6458, 6.18067, 6.34552)

[node name="Floor17" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 0.98151, -0.191409, 0, 0.191409, 0.98151, -21.6194, 6.18067, 6.34552)

[node name="Floor18" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 0.996908, 0.0785809, 0, -0.0785809, 0.996908, -19.6168, 6.23656, 4.5569)

[node name="Floor19" parent="." instance=ExtResource("18_yc10j")]
transform = Transform3D(1, 0, 0, 0, 0.996908, 0.0785809, 0, -0.0785809, 0.996908, -21.5904, 6.23656, 4.5569)

[node name="d_tree" parent="." instance=ExtResource("19_jscy8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21, 5, 14)

[node name="Fence" parent="." instance=ExtResource("20_y6deb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21, 5, 19)

[node name="Fence2" parent="." instance=ExtResource("20_y6deb")]
transform = Transform3D(-0.00242595, 0, -0.999997, 0, 1, 0, 0.999997, 0, -0.00242595, -22.7618, 5, 17.2257)

[node name="Fence3" parent="." instance=ExtResource("20_y6deb")]
transform = Transform3D(-0.00242595, 0, -0.999997, 0, 1, 0, 0.999997, 0, -0.00242595, -22.7618, 5, 13.7955)

[node name="Fence4" parent="." instance=ExtResource("20_y6deb")]
transform = Transform3D(-0.00242595, 0, -0.999997, -0.283546, 0.958958, 0.00068787, 0.958956, 0.283547, -0.00232639, -22.7618, 5.44935, 9.79491)

[node name="Fence5" parent="." instance=ExtResource("20_y6deb")]
transform = Transform3D(-0.00242595, 0, -0.999997, -0.0610483, 0.998135, 0.000148101, 0.998132, 0.0610486, -0.00242143, -22.7618, 5.72021, 5.72153)

[node name="cobweb" parent="." instance=ExtResource("21_og1vs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.47062, 0.733878, -2.21605)

[node name="cobweb2" parent="." instance=ExtResource("21_og1vs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.2662, 4.84379, 14.6265)

[node name="cobweb3" parent="." instance=ExtResource("21_og1vs")]
transform = Transform3D(1, 0, 0, 0, -0.0596026, 0.998222, 0, -0.998222, -0.0596026, -19.038, 4.84299, 18.2483)

[node name="grave1" parent="." instance=ExtResource("22_jscy8")]
transform = Transform3D(-0.263301, 0, 0.964714, 0, 1, 0, -0.964714, 0, -0.263301, -21.8452, 4.65654, 14.7299)

[node name="pumpkin1" parent="." instance=ExtResource("23_pm3ni")]
transform = Transform3D(1.85214, 0, 2.36, 0, 3, 0, -2.36, 0, 1.85214, -19.1335, 4.8131, 14.4397)

[node name="pumpkin3" parent="." instance=ExtResource("23_pm3ni")]
transform = Transform3D(-1.26216, 0, 2.72157, 0, 3, 0, -2.72157, 0, -1.26216, -0.953087, 3.87619, 18.4317)

[node name="pumpkin4" parent="." instance=ExtResource("23_pm3ni")]
transform = Transform3D(-2.25466, 0, -1.97902, 0, 3, 0, 1.97902, 0, -2.25466, 2.59084, 0.449615, 1.83762)

[node name="pumpkin2" parent="." instance=ExtResource("23_pm3ni")]
transform = Transform3D(1.85214, 0, 2.36, 0, 3, 0, -2.36, 0, 1.85214, -21.4322, 4.8131, 17.9598)

[node name="Simple Candelabra" parent="." instance=ExtResource("24_og1vs")]
transform = Transform3D(-0.0353704, 0, 0.999374, 0, 1, 0, -0.999374, 0, -0.0353704, -19.3526, 5.79156, 14.35)

[node name="coffin" parent="." instance=ExtResource("25_2wyq8")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -21, 7, 7)

[node name="Coffin (1)" parent="." instance=ExtResource("26_2wyq8")]
transform = Transform3D(0.752001, 0, -0.659162, 0, 1, 0, 0.659162, 0, 0.752001, -0.809153, 0.381339, -2.11575)

[connection signal="coin_collected" from="Banana" to="HUD" method="_on_coin_collected"]
